# base-ai-agent

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
base_agent/: __init__.py  config.yml  llminterface.py
base_agent/voice/: listen.py
tests/: test_llms.py
tests/voice/: test_listen.py  test_talk.py
