[project]
name = "base-ai-agent"
version = "0.3.2"
description = "Base class for all of Deeplearn's  AI agents."
authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "GPLv3" }
dependencies = [
    "loguru>=0.7.2,<0.8",
    "pyyaml>=6.0.1,<7",
    "openai>=1.16.0,<2",
    "ollama>=0.1.8,<0.2",
    "python-dotenv>=1.0.1,<2",
    "instructor>=1.3.2,<2",
    "pydantic>=2.7.2,<3",
    "anthropic>=0.45.2,<0.46",
]

[dependency-groups]
voice = [
    "piper-tts>=1.2.0,<2",
    "openai-whisper",
]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<6",
]

[tool.uv]
default-groups = [
    "voice",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["base_agent"]

[tool.hatch.build.targets.wheel]
include = ["base_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
