[project]
name = "base-ai-agent"
version = "0.5.0"
description = "Base class for all of Deeplearn's  AI agents."
authors = [{ name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "GPLv3" }
dependencies = [
    "loguru>=0.6,<0.7",
    "pyyaml>=6.0.1",
    "openai>=1.16.0",
    "ollama>=0.1.8",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.2",
    "anthropic>=0.45.2",
    "pydantic-ai>=0.0.31",
    "nest-asyncio>=1.6.0",
    "httpx>=0.27.2",
]

[dependency-groups]
voice = [
    "piper-tts>=1.2.0",
    "openai-whisper",
]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.uv]
default-groups = [
    "voice",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["base_agent"]

[tool.hatch.build.targets.wheel]
include = ["base_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
